# ni

./: .gitattributes  .gitignore  AST.hs  Main.hs  Ni.hs  README.md  default.nix  ni.cabal  ni.nix
examples/: fibonacci  fold  prime.ni  sum_1_to_5  triangular.ni
src/: AST.hs  Base.hs  Builtin.hs  Main.hs  Ni.hs  Nirc.hs  stdlib.ni
