name:                ni
version:             0
synopsis:            A stack-based concatenative programming language
homepage:            https://git.monade.li/ni
license:             ISC
license-file:        LICENSE
author:              Naïm Favier
maintainer:          n@monade.li
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ni
  main-is:             Main.hs
  other-modules:       Base, Ni
  other-extensions:    FlexibleInstances
  build-depends:       base, containers, transformers, unix
  hs-source-dirs:      src
  default-language:    Haskell2010

executable nirc
  main-is:             Nirc.hs
  other-modules:       Base, Ni
  other-extensions:    FlexibleInstances
  build-depends:       base, containers, transformers, unix, bytestring, base64-bytestring, connection, data-default-class
  hs-source-dirs:      src
  default-language:    Haskell2010
